# PE-project

./: .env.example  .gitignore  README.md  pyproject.toml
src/: __init__.py  config.py  dict_data_collect.py  main_exec.py
src/analises/: estat_descritiva.py  freq_table.py  freq_table_cont.py  graficos.py  tabela_contingencia.py
